# adb-connect

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release-electron.yml
adb-connect-electron/: .gitignore  README.md  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
adb-connect-electron/electron/: main.ts  preload.ts
adb-connect-electron/native-adb/: Cargo.toml
adb-connect-electron/native-adb/src/: main.rs
adb-connect-electron/scripts/: rename-electron-output.cjs
adb-connect-electron/src/: main.tsx  styles.css  vite-env.d.ts
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
