[package]
name = "adb-connect"
version = "0.1.0"
description = "ADB device connection manager"
authors = ["fang"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
dirs = "5.0"
getrandom = "0.3"
